--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "jest": "^24.8.0",
     "ts-jest": "^24.1.0",
     "typescript": "^3.6.3"
+  },
+  "dependencies": {
+    "@types/node": "^12.7.11",
+    "contentful": "^7.10.0"
   }
 }
