--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
       "target": "es5",
       "module": "commonjs",
       "sourceMap": true,
-      "outDir": "dist"
+      "outDir": "dist",
+      "esModuleInterop": true
     },
     "exclude": ["adapter.config.ts", "test.ts"]
   }
