--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch --silent",
-    "start": "webpack-dev-server --mode development"
+    "start": "webpack-dev-server --mode development",
+    "lint": "tslint --project tsconfig.json --config tslint.json",
+    "lint:fix": "tslint --project tsconfig.json --config tslint.json --fix"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +17,7 @@
     "jest": "^24.8.0",
     "ts-jest": "^24.1.0",
     "ts-loader": "^6.2.0",
+    "tslint": "^5.20.0",
     "typescript": "^3.6.4",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.9",
