fix: Fix package export stuff

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "webpack-dev-server": "^3.8.2"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.6.0",
     "@types/node": "^12.7.11",
     "contentful": "^7.10.0",
     "prismic-javascript": "^2.1.1"
