feat: Outsource contentful adapter

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.6.0",
-    "contentful": "^7.10.0",
+    "lodash.merge": "^4.6.2",
+    "norma-connect-contentful": "no-creative-name/norma-connect-contentful",
     "prismic-javascript": "^2.1.1"
   }
 }
