--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,10 @@
       "target": "es6",
       "module": "commonjs",
       "sourceMap": true,
+      "rootDir": "src",
       "outDir": "dist",
-      "esModuleInterop": true
+      "esModuleInterop": true,
+      "allowJs": true
     },
-    "exclude": ["adapter.config.ts", "test.ts"]
+    "exclude": ["adapter-config.ts", "test.ts"]
   }
