--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,11 @@
 {
-    "compilerOptions": {
-      "declaration": true,
-      "target": "es6",
-      "module": "commonjs",
-      "sourceMap": true,
-      "rootDir": "src",
-      "outDir": "dist",
-      "esModuleInterop": true,
-      "allowJs": true
-    },
-    "exclude": ["adapter-config.ts", "test.ts"]
-  }
+  "compilerOptions": {
+    "declaration": true,
+    "target": "es6",
+    "module": "commonjs",
+    "sourceMap": true,
+    "outDir": "dist",
+    "esModuleInterop": true
+  },
+  "exclude": ["adapter-config.ts", "test.ts"]
+}
