--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "test": "jest --coverage",
+    "test": "jest",
     "test:watch": "jest --watch --silent",
     "start": "webpack-dev-server --mode development --config ./webpack.config.dev.js",
     "build": "rm -rf dist && webpack --config ./webpack.config.build.js",
